--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<input autofocus type="password" id="password" class="form-control input-sm" style="text-align:center;height:38px;font-size:14px;">
 				<input id="enter_pass" type="submit" class="btn btn-primary" value="ВВОД" onclick="getpass();" style="width:100%; margin: 1px 0 10px 0;">	
 			</div>			                                                        
-			<div id="all" class="row" hidden>                                       
+			<div id="all" class="row">                                       
 				<!-- <select class="custom-select">                                 
 				  <option selected>Open this select menu</option>                   
 				  <option value="1">One</option>                                    
