--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 		//let vyh_1530_v = parseInt(rub_v_сhas * vyh_1530.value * 2);
 
 		
-		okl.value =  parseInt((summ_d-summ_v) * rub_v_сhas * 100) / 100;
+		okl.value =  parseInt(summ_d * rub_v_сhas * 100) / 100;
         nadbavka.value = parseInt((summ_r - summ_v)* rub_v_сhas * 0.25 * 100) / 100;
 		dvoynaya.value = parseInt(2 * summ_v * rub_v_сhas * 100) / 100;
 		premia_tek.value = parseInt(100 * (parseInt(okl.value) + parseInt(nadbavka.value)) * 0.7) / 100;
