--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	<title>СУПЕР СЕКРЕТНОЕ ОРУЖИЕ v1.1</title>
+	<title>СУПЕР СЕКРЕТНОЕ ОРУЖИЕ v6</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -129,10 +129,10 @@
 
 					</div>	
 					<div class="input-group">
-						<input type="number" id="day_all" class="form-control input-sm border-left-0 border-top-0" style="border-radius:0;text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
-						<input type="number" id="day_of" class="form-control input-sm border-top-0" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
-						<input type="number" id="day_raz" class="form-control input-sm border-top-0" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>					
-						<input type="number" id="day_vyh" class="form-control input-sm border-top-0" style="border-radius:0 0 4px 0;text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>					
+						<input type="number" id="day_all" class="text-center form-control input-sm border-left-0 border-top-0" style="border-radius:0;background:white;padding:0;height:21px;font-size:14px;" readonly>
+						<input type="number" id="day_of" class="text-center form-control input-sm border-top-0" style="background:white;padding:0;height:21px;font-size:14px;" readonly>
+						<input type="number" id="day_raz" class="text-center form-control input-sm border-top-0" style="background:white;padding:0;height:21px;font-size:14px;" readonly>					
+						<input type="number" id="day_vyh" class="text-center form-control input-sm border-top-0" style="border-radius:0 0 4px 0;background:white;padding:0;height:21px;font-size:14px;" readonly>					
 
 					</div>			
 				</div>	
