--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control input-sm border-left-0 border-bottom-0" value="ВСЕГО" style="border-radius:0;text-align:center;padding:0;height:21px;font-size:12px;font-weight:bold;" readonly>
 						<input type="text" class="form-control input-sm border-bottom-0" value="ОФ" style="text-align:center;padding:0;height:21px;font-size:12px;font-weight:bold;" readonly>
-						<input type="text" class="form-control input-sm border-bottom-0" value="РАЗ" style="border-radius:0 4px 0 0;text-align:center;padding:0;height:21px;font-size:12px;font-weight:bold;" readonly>				
+						<input type="text" class="form-control input-sm border-bottom-0" value="РАЗ" style="text-align:center;padding:0;height:21px;font-size:12px;font-weight:bold;" readonly>				
 						<input type="text" class="form-control input-sm border-bottom-0" value="ВЫХ" style="border-radius:0 4px 0 0;text-align:center;padding:0;height:21px;font-size:12px;font-weight:bold;" readonly>				
 
 					</div>	
