--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
-						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Оклад:</span>
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Оклад (без вых):</span>
 					</div>		
 					<input type="number" id="okl" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>
