--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="input-group-text justify-content-center" style="background:#007BFF;border-radius:4px 0 0 4px;padding:4px 6px;border:0;">
 						<input type="checkbox" id="debug" onclick="debugCheck()">
 					</div>
-					<input id="erase" type="submit" class="btn btn-primary" value="Очистить" onclick="erase(); buttonPressed(this.id);" style="margin-left:1px;width:30%;font-weight:bold;">
+					<input hidden id="erase" type="submit" class="btn btn-primary" value="Очистить" onclick="erase(); buttonPressed(this.id);" style="margin-left:1px;width:30%;font-weight:bold;">
 					<input id="save" type="submit" class="btn btn-primary" value="Сохранить" onclick="save(); buttonPressed(this.id);" style="margin-left:1px;width:35%;font-weight:bold;">	
 					<input id="getzp" type="submit" class="btn btn-primary" value="Расчет ЗП" onclick="getZp(); save(); buttonPressed(this.id);" style="margin-left:1px;width:35%;font-weight:bold;">	
 				</div>
