--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 	};
 
 	function loadJson(sel) {
-	    var sel_m = new Date ('2021-' + add_zero(select_m.selectedIndex+1) + '-01');
+	    var sel_m = new Date ('2021-' + add_zero(sel+1) + '-01');
 		dtPick(sel_m);
 		select_m.selectedIndex = sel;	
 		oklad_ar       = json_val.oklad;
