--- a/index.html
+++ b/index.html
@@ -477,8 +477,10 @@
 
 		okl.value = parseInt((returnOfis.All115 + returnOfis.All1530 + returnRaz.All115 + returnRaz.All1530) * rub_v_сhas);
 
-		let nadbavka115 = parseInt(returnRaz.All115 * rub_v_сhas * 0.25);
-		let nadbavka1530 = parseInt(returnRaz.All1530 * rub_v_сhas * 0.25);
+		//let nadbavka115 = parseInt(returnRaz.All115 * rub_v_сhas * 0.25);
+		//let nadbavka1530 = parseInt(returnRaz.All1530 * rub_v_сhas * 0.25);
+		let nadbavka115 = parseInt((returnRaz.All115 + dor115 + returnRaz.Prazd115 + returnRaz.Vyh115) * rub_v_сhas * 0.25);
+		let nadbavka1530 = parseInt((returnRaz.All1530 + dor1530 + returnRaz.Prazd1530 + returnRaz.Vyh1530) * rub_v_сhas * 0.25);		
 		nadbavka.value = parseInt(nadbavka115 + nadbavka1530);
 		
 		let prazd_vyh115 = parseInt(returnRaz.Prazd115 + returnRaz.Vyh115 + returnOfis.Prazd115 + returnOfis.Vyh115);
