--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 		//console.log("returnRaz.All115: " + returnRaz.All115);		
 		//console.log("returnDor.All115: " + returnDor.All115);
 		
-		oklad28.value = parseInt((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas);// + nadbavka115 + dvoynaya115);	
+		oklad28.value = parseInt((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas + nadbavka115 + dvoynaya115);	
 		oklad13.value = parseInt(parseInt(chist_28.value) - parseInt(oklad28.value) + parseInt(premia_pred.value));
 
 		rvc.value = rub_v_сhas;
