--- a/index.html
+++ b/index.html
@@ -477,12 +477,6 @@
 		let pr_vyh115 = parseInt(returnRaz.Prazd115 + returnRaz.Vyh115) * 8;
 		let pr_vyh1530 = parseInt(returnRaz.Prazd1530 + returnRaz.Vyh1530) * 8;
 
-		let summ115 = parseInt(returnRaz.All115) + parseInt(returnDor.All115);
-		let summ1530 = parseInt(returnRaz.All1530) + parseInt(returnDor.All1530);
-		let nadbavka115 = summ115 * rub_v_сhas * 0.25;
-		let nadbavka1530 = summ1530 * rub_v_сhas * 0.25;
-		nadbavka.value = parseInt(nadbavka115 + nadbavka1530);
-		
 		let prazd_vyh115 = parseInt(returnRaz.Prazd115 + returnRaz.Vyh115 + returnOfis.Prazd115 + returnOfis.Vyh115);
 		let prazd_vyh1530 = parseInt(returnRaz.Prazd1530 + returnRaz.Vyh1530 + returnOfis.Prazd1530 + returnOfis.Vyh1530);
 	    let prazd_vyh = prazd_vyh115 + prazd_vyh1530;
@@ -491,6 +485,14 @@
 		let dvoynaya1530 = parseInt(prazd_vyh1530 * rub_v_сhas * 8 * 2);
 		dvoynaya.value = dvoynaya115 + dvoynaya1530;
 
+		let summ115 = parseInt(returnRaz.All115) + parseInt(returnDor.All115) + parseInt(prazd_vyh115 * 8);
+		let summ1530 = parseInt(returnRaz.All1530) + parseInt(returnDor.All1530) + parseInt(prazd_vyh1530 * 8);
+		console.log("summ115: " + summ115);
+		console.log("summ1530: " + summ1530);
+		let nadbavka115 = summ115 * rub_v_сhas * 0.25;
+		let nadbavka1530 = summ1530 * rub_v_сhas * 0.25;
+		nadbavka.value = parseInt(nadbavka115 + nadbavka1530);
+		
 		doroga_out.value = parseInt((returnDor.Vyh115 + returnDor.Vyh1530) * rub_v_сhas * 8);
 		premia_tek.value = parseInt((parseInt(okl.value) + parseInt(nadbavka.value) + parseInt(dvoynaya.value)/2 + parseInt(doroga_out.value)) * 0.7);
 		let summaVseh = parseInt(okl.value) + parseInt(nadbavka.value) + parseInt(dvoynaya.value) + parseInt(doroga_out.value); 
