--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				</div>
 				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
-						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Дорога:</span>
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Дорога в вых:</span>
 					</div>		
 					<input type="number" id="doroga_out" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>					
