--- a/index.html
+++ b/index.html
@@ -498,9 +498,7 @@
 		chist_28.value = parseInt(summaVseh + parseInt(rk_only.value) - parseInt(ndfl_only.value)); 	
 		
 		oklad28.value = parseInt((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas * 1.15 * 0.87);
-		//oklad28.value = parseInt((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas * 1.15);
-
-		oklad13.value = parseInt(parseInt(chist_28.value) - parseInt(oklad28.value) + parseInt(premia_pred.value));
+		oklad13.value = parseInt(parseInt(chist_28.value) - parseInt(premia_pred.value) - parseInt(oklad28.value) + parseInt(premia_pred.value));
 
 		rvc.value = rub_v_сhas;
 		day_of.value = returnOfis.All115 + returnOfis.All1530;
