--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<option id="m5" value="Май">Май</option>
 						<option id="m6" value="Июнь">Июнь</option>
 						<option id="m7" value="Июль">Июль</option>
-						<option id="m8" value="Авгут">Август</option>
+						<option id="m8" value="Август">Август</option>
 						<option id="m9" value="Сентябрь">Сентябрь</option>
 						<option id="m10" value="Октябрь">Октябрь</option>		
 						<option id="m11" value="Ноябрь">Ноябрь</option>
