--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
-						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Оклад (на руки):</span>
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Общее (на руки):</span>
 					</div>		
 					<input hidden type="number" id="chist_13" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" readonly>
 					<input type="number" id="chist_28" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" readonly>
