--- a/index.html
+++ b/index.html
@@ -479,7 +479,10 @@
 		let dvoynaya115 = parseInt(prazd_vyh115 * rub_v_сhas * 8 * 2);
 		let dvoynaya1530 = parseInt(prazd_vyh1530 * rub_v_сhas * 8 * 2);
 		dvoynaya.value = dvoynaya115 + dvoynaya1530;
-
+		console.log("pr_vyh115 = " + pr_vyh115);
+		console.log("prazd_vyh115 = " + prazd_vyh115);
+		console.log("dvoynaya115 = " + dvoynaya115);
+		
 		let summ115 = parseInt(returnRaz.All115) + parseInt(returnDor.All115) + parseInt(returnDor.Vyh115 * 8) + parseInt(prazd_vyh115 * 8);
 		let summ1530 = parseInt(returnRaz.All1530) + parseInt(returnDor.All1530) + parseInt(returnDor.Vyh1530 * 8) + parseInt(prazd_vyh1530 * 8);
 		console.log("returnDor.All115: " + returnDor.All115);
