--- a/index.html
+++ b/index.html
@@ -468,7 +468,10 @@
 		
 		let rub_v_сhas =  parseInt(oklad.value / rab_chas.value * 1000) / 1000;
 		okl.value = parseInt((returnOfis.All115 + returnOfis.All1530 + returnRaz.All115 + returnRaz.All1530 + returnDor.All115 + returnDor.All1530) * rub_v_сhas);
-	
+		console.log(returnOfis);
+		console.log(returnRaz);				
+		console.log(returnDor);	
+		
 		let pr_vyh115 = parseInt(returnRaz.Prazd115 + returnRaz.Vyh115) * 8;
 		let pr_vyh1530 = parseInt(returnRaz.Prazd1530 + returnRaz.Vyh1530) * 8;
 
