--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 				
 				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
-						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Всего за + select_m.options[sel].value + :</span>
+						<span class="input-group-text" id="chist_28_text" style="width:100%;font-size:14px;font-weight:bold;">Всего за ...:</span>
 					</div>		
 					<input hidden type="number" id="chist_13" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" readonly>
 					<input type="number" id="chist_28" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" readonly>
@@ -444,6 +444,7 @@
 		premia_text.innerHTML = "Премия: " + select_m.options[sel].value;		
 		premia_pred.value     = premia_pred_ar[selected];
 		premia_pred_text.innerHTML = "Премия: " + select_m.options[selected].value;
+		chist_28_text.innerHTML = "Всего за " + select_m.options[sel].value + ":";
 		prof.value         = prof_ar[sel];
 		oklad28_text.value = '28 ' + months[sel];
 		oklad13_text.value = '13 ' + months[selected2]; 
@@ -495,11 +496,12 @@
 		let summaVseh = parseInt(okl.value) + parseInt(nadbavka.value) + parseInt(dvoynaya.value) + parseInt(doroga_out.value) + parseInt(premia_pred.value); 
 		rk_only.value = parseInt(summaVseh * 0.15);
 		ndfl_only.value = parseInt((summaVseh + parseInt(rk_only.value)) * 0.13);		
-		chist_28.value = parseInt(summaVseh + parseInt(rk_only.value) - parseInt(ndfl_only.value)); 	
-		
+	
 		oklad28.value = parseInt((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas * 1.15 * 0.87);
 		oklad13.value = parseInt(parseInt(chist_28.value) - parseInt(premia_pred.value) - parseInt(oklad28.value) + parseInt(premia_pred.value));
 
+		chist_28.value = parseInt(summaVseh + parseInt(premia_tek.value) + parseInt(rk_only.value) - parseInt(ndfl_only.value)); 
+		
 		rvc.value = rub_v_сhas;
 		day_of.value = returnOfis.All115 + returnOfis.All1530;
 		day_raz.value = returnRaz.All115 + returnRaz.All1530;
