--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="premia_pred_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Премия: --</span>
 					</div>		
-					<input type="number" id="premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;">
+					<input type="number" id="premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>	
 				
 				<div class="input-group">
@@ -444,7 +444,7 @@
 		premia_text.innerHTML = "Премия: " + select_m.options[sel].value;		
 		premia_pred.value     = premia_pred_ar[selected];
 		premia_pred_text.innerHTML = "Премия: " + select_m.options[selected].value;
-		chist_28_text.innerHTML = "Всего за " + select_m.options[sel].value + ":";
+		chist_28_text.innerHTML = "Общее за " + select_m.options[sel].value + ":";
 		prof.value         = prof_ar[sel];
 		oklad28_text.value = '28 ' + months[sel];
 		oklad13_text.value = '13 ' + months[selected2]; 
@@ -498,9 +498,9 @@
 		ndfl_only.value = parseInt((summaVseh + parseInt(rk_only.value)) * 0.13);		
 	
 		oklad28.value = parseInt((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas * 1.15 * 0.87);
-		oklad13.value = parseInt(parseInt(chist_28.value) - parseInt(premia_pred.value) - parseInt(oklad28.value) + parseInt(premia_pred.value));
+		oklad13.value = parseInt(summaVseh + parseInt(rk_only.value) - parseInt(ndfl_only.value) - parseInt(premia_pred.value) - parseInt(oklad28.value) + parseInt(premia_pred.value));
 
-		chist_28.value = parseInt(summaVseh + parseInt(premia_tek.value) + parseInt(rk_only.value) - parseInt(ndfl_only.value)); 
+		chist_28.value = parseInt(oklad28.value) + parseInt(oklad13.value) + parseInt(premia_tek.value); 
 		
 		rvc.value = rub_v_сhas;
 		day_of.value = returnOfis.All115 + returnOfis.All1530;
@@ -549,7 +549,7 @@
 		json_val.doroga[selIndex] = doroga.value;	
 
 		json_val.premia_ar[selIndex] = parseInt(premia.value * 100) / 100;	
-		json_val.premia_pred_ar[selIndex] = parseInt(premia_tek.value);	
+ 		json_val.premia_pred_ar[selIndex] = parseInt(premia_tek.value);			
 		json_val.prof_ar[selIndex] = parseInt(prof.value * 100) / 100;
 		localStorage.setItem ("jsonData", JSON.stringify(json_val));
 		console.log("Сохранено");
