--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 		oklad13.value = parseInt(summaVseh + parseInt(rk_only.value) - parseInt(ndfl_only.value) - parseInt(oklad28.value));
 
 		chist_all.value = parseInt(oklad28.value) + parseInt(oklad13.value) + parseInt(premia_tek.value); 
-		chist_bez.value = parseInt(oklad28.value) + parseInt(oklad13.value); 
+		chist_bez.value = parseInt(oklad28.value) + parseInt(oklad13.value) - parseInt(premia_pred.value); 
 		
 		rvc.value = rub_v_сhas;
 		day_of.value = returnOfis.All115 + returnOfis.All1530;
