--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 	const prazdniki = ['2021-01-01', '2021-01-02', '2021-01-03', '2021-01-04', '2021-01-05', '2021-01-06', '2021-01-07', '2021-01-08', 
 					   '2021-02-22', '2021-02-23', '2021-03-08', '2021-05-01', '2021-05-03', '2021-05-09', '2021-05-10', '2021-05-13', '2021-06-12',
 					   '2021-06-14', '2021-07-20', '2021-10-11', '2021-11-04', '2021-11-05', '2021-12-31'];
-	const korotkiy = ['2021-02-20', '2021-04-30', '2021-05-12', '2021-06-11', '2021-07-19', '2021-11-03', '2021-12-30'];				   
+	const korotkiy = ['2021-02-20', '2021-04-30', '2021-05-12', '2021-06-11', '2021-07-19', '2021-11-03'];				   
 
 	function dtPick(sel_m) {
 		$('#ofis').datepick('destroy'); 
