--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
 	var	dor1530_rab = 0;
 	var	dor1530_prazd = 0;	
 	
-	const prazdniki = ['2021-01-01', '2021-01-02', '2021-01-03', '2021-01-04', '2021-01-05', '2021-01-06', '2021-01-07', '2021-01-08', 
-					   '2021-02-22', '2021-02-23', '2021-03-08', '2021-05-01', '2021-05-03', '2021-05-09', '2021-05-10', '2021-05-13', '2021-06-12',
-					   '2021-06-14', '2021-07-20', '2021-10-11', '2021-11-04', '2021-11-05', '2021-12-31'];
-	const korotkiy = ['2021-02-20', '2021-04-30', '2021-05-12', '2021-06-11', '2021-07-19', '2021-11-03'];				   
+	const prazdniki = ['2021-11-04', '2021-11-05', '2021-12-31', '2022-01-01', '2022-01-02', '2022-01-03', '2022-01-04', '2022-01-05', 
+			   '2022-01-06', '2022-01-07', '2022-01-08', '2022-02-23', '2022-03-08', '2022-05-01', '2022-05-02', '2022-05-09',
+			   '2022-06-12', '2022-07-09', '2022-10-11', '2022-11-04'];
+	const korotkiy = ['2022-02-22', '2022-03-05', '2022-07-08', '2022-10-10', '2022-11-03'];				   
 
 	function dtPick(sel_m) {
 		$('#ofis').datepick('destroy'); 
